--- a/a.html
+++ b/a.html
@@ -9,11 +9,25 @@
 			height: 200px;
 			background-color: red;
 		}
-
 	</style>
 </head>
 <body>
 	<div>
 	</div>
+	<input type="button" value="点击">
+
+	<script>
+		var div = document.querySelector("div")
+		var btn = document.querySelector("input")
+		btn.onclick = function(){
+			
+				div.style.width = "300px";
+				div.style.height = "300px";
+				
+			
+		}
+
+
+	</script>
 </body>
 </html>
