--- a/a.html
+++ b/a.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style>
+	body {
+		transition: all 2s;
+	}
 		div {
 			width: 200px;
 			height: 200px;
@@ -23,7 +26,7 @@
 			
 				div.style.width = "300px";
 				div.style.height = "300px";
-				
+				div.style.transform = "translate(50%,50%)"
 			
 		}
 
